--- a/src/global.css
+++ b/src/global.css
@@ -87,7 +87,7 @@ video {
   vertical-align: baseline;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
-
+/* HTML5 display-role reset for older browsers */
 article,
 aside,
 details,
