--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,3 +1,14 @@
-.header {
-  height: 50px;
+.link {
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.5s;
+}
+
+.link:hover {
+  color: rgb(243, 219, 219);
+  text-decoration: underline;
+}
+
+.appBar {
+  border-bottom: 1px solid #000;
 }
